# Advent-of-Code

./: .gitignore  pyproject.toml
tests/: test_2015day_1.py  test_2015day_2.py
utils/: files.py
year2015/solutions/: day_1.py  day_2.py
year2022/01/: part1.py  part2.py
year2022/02/: part1.py  part2.py
year2022/03/: part1.py  part2.py
year2022/04/: part1.py  part2.py
year2022/06/: part1.py  part2.py
year2022/07/: data_map.md  part1.py
year2022/08/: part1.py
year2022/10/: part1.py  part2.py
